update volume bar

--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
             <br/>
             <div class="vol-nav">
                 <div class="vid-btn" onclick="updateVol(-0.1)"><i class="fas fa-volume-down"></i></div>
-
+<!-- 
                 <div id="vol-bar">
                     <div id="vol-left"></div>
-                </div>
-
-                <!-- <div id="vol-bar2">
-                    <div class="bar1" style="height: 10%;" id="white-bar"></div>
-                    <div class="bar2" style="height: 20%;" id="white-bar"></div>
-                    <div class="bar3" style="height: 30%;"id="white-bar"></div>
-                    <div class="bar4" style="height: 40%;"id="white-bar"></div>
-                    <div class="bar5" style="height: 50%;"id="white-bar"></div>
-                    <div class="bar6" style="height: 60%;"id="white-bar"></div>
-                    <div class="bar7" style="height: 70%;"id="white-bar"></div>
-                    <div class="bar8" style="height: 80%;"id="white-bar"></div>
-                    <div class="bar9" style="height: 90%;"id="white-bar"></div>
-                    <div class="bar10" style="height: 100%;"id="white-bar"></div>
                 </div> -->
+
+                <div id="vol-bar2">
+                    <div id="bar1" style="height: 10%;" class="white-bar"></div>
+                    <div id="bar2" style="height: 20%;" class="white-bar"></div>
+                    <div id="bar3" style="height: 30%;"class="white-bar"></div>
+                    <div id="bar4" style="height: 40%;"class="white-bar"></div>
+                    <div id="bar5" style="height: 50%;"class="white-bar"></div>
+                    <div id="bar6" style="height: 60%;"class="white-bar"></div>
+                    <div id="bar7" style="height: 70%;"class="white-bar"></div>
+                    <div id="bar8" style="height: 80%;"class="white-bar"></div>
+                    <div id="bar9" style="height: 90%;"class="white-bar"></div>
+                    <div id="bar10" style="height: 100%;"class="white-bar"></div>
+                </div>
 
                 <div class="vid-btn" onclick="updateVol(0.1)"><i class="fas fa-volume-up"></i></div>
             </div>
